--- a/decks/aws-ssm-session-manager/deck.mdx
+++ b/decks/aws-ssm-session-manager/deck.mdx
@@ -18,6 +18,7 @@ import imgAWSBastion from './img/linux-bastion-hosts-on-aws-architecture.png'
 
 <Head>
   <title>AWS SSM Session Manager</title>
+  <base href="/decks/aws-ssm-session-manager/"></base>
 </Head>
 
 # AWS SSM Session Manager
